<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                android:id="@+id/list_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="0dp"></com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_header_height"
                android:background="@color/green_dark">

                <TextView
                    android:id="@+id/title_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/work_experence"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/app_text_size"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/default_margin_normal"/>

                <ImageView
                    android:id="@+id/done_button"
                    android:layout_width="@dimen/item_header_height"
                    android:layout_height="@dimen/item_header_height"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/default_margin_small"
                    android:layout_marginRight="@dimen/default_margin_small"
                    android:src="@mipmap/ic_done"/>
            </RelativeLayout>

            <LinearLayout
                android:padding="@dimen/default_margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_normal"
                    android:text="@string/company_name"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/app_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height_oneline"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:background="@color/theme_color_light"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:lines="1"
                    android:nextFocusForward="@+id/input_address"
                    android:paddingLeft="@dimen/default_margin_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_normal"
                    android:text="@string/job_title"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/app_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_job_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height_oneline"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:background="@color/theme_color_light"
                    android:gravity="center_vertical"
                    android:inputType="textCapSentences"
                    android:lines="1"
                    android:paddingLeft="@dimen/default_margin_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_normal"
                    android:text="@string/job_location"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/app_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_job_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height_oneline"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:background="@color/theme_color_light"
                    android:gravity="center_vertical"
                    android:inputType="textCapWords"
                    android:lines="1"
                    android:paddingLeft="@dimen/default_margin_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_normal"
                    android:text="@string/date_period"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/app_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:layout_height="@dimen/input_height_oneline"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_date1"
                        android:layout_width="@dimen/date_width"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:background="@color/theme_color_light"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/tranferance"
                        android:text="-"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:layout_margin="@dimen/default_margin_normal"
                        android:layout_gravity="center_vertical"/>

                    <Button
                        android:id="@+id/btn_date2"
                        android:layout_width="@dimen/date_width"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:background="@color/theme_color_light"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_normal"
                    android:text="@string/job_responseibilities"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/app_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_job_experience"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height_multiline"
                    android:layout_marginTop="@dimen/default_margin_small"
                    android:background="@color/theme_color_light"
                    android:inputType="textCapSentences|textMultiLine"
                    android:paddingLeft="@dimen/default_margin_normal" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>